integration for web, iOS, android

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   webview_flutter: ^4.2.2
+  webview_flutter_android: ^3.6.2
+  webview_flutter_wkwebview: ^3.4.0
+  webview_flutter_web: ^0.2.2
 
 dev_dependencies:
   flutter_test:
